--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,7 @@
     ],
     "rules": {
         "react/react-in-jsx-scope": "off",
-        "no-async-promise-executor": 0
+        "no-async-promise-executor": 0,
+        "react/prop-types": 0
     }
 }
